# ============================================================================
# ULTRACLAW — Cargo.toml
# ============================================================================
# MEMORY OPTIMIZATION NOTES:
# - Every dependency is chosen to avoid pulling in heavy C++ runtimes or
#   duplicate TLS stacks. We use rustls (pure Rust TLS) everywhere to
#   eliminate the OpenSSL shared library and its ~5MB RSS overhead.
# - Feature flags are surgical: only the exact tokio/matrix-sdk features
#   needed are enabled. This prevents unused async primitives from being
#   compiled in and reduces both binary size and cold-start RAM.
# - `rusqlite` is bundled so the SQLite engine is statically linked and
#   shares the process address space — no IPC overhead, no extra process.
# ============================================================================

[package]
name = "ultraclaw"
version = "0.1.0"
edition = "2021"
description = "Hyper-optimized autonomous AI agent: 15+ network bridge, dual-model failover"

# ============================================================================
# DEPENDENCIES — each chosen for minimal footprint
# ============================================================================
[dependencies]

# --- Async Runtime ---
# Only enable the multi-threaded runtime and macros. Omitting "io-util",
# "io-std", "signal", etc. saves ~200KB of compiled code.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }

# --- Matrix Chat Layer ---
# The single SDK that replaces native WhatsApp/Telegram/Discord/Slack/iMessage
# SDKs. By routing everything through Matrix bridges, we avoid linking 15+
# platform SDKs (each 10-50MB). This alone saves 200-500MB of RAM.
# Using rustls instead of native-tls to avoid OpenSSL dependency.
matrix-sdk = { version = "0.7", features = ["rustls-tls"], default-features = false }

# --- HTTP Client (for Cloud LLM APIs) ---
# Shared with matrix-sdk's internal HTTP stack when possible.
# rustls-tls avoids linking OpenSSL. "json" enables serde integration.
# "stream" enables streaming responses for token-by-token output.
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }

# --- Local LLM Inference (OPTIONAL) ---
# Bindings to llama.cpp. Requires cmake to build from source.
# This uses mmap to load GGUF model weights directly from storage into
# virtual memory. Only actively-used layers consume physical RAM.
# Enable with: cargo build --features local-llm
# When disabled, the local engine uses a stub that returns an error,
# and the failover engine falls through to the error path gracefully.
llama_cpp = { version = "0.1", optional = true }

# --- Embedded Database ---
# "bundled" compiles SQLite from C source directly into our binary.
# This means zero IPC overhead (no socket/pipe to a DB process) and the
# SQLite page cache shares our process's address space.
# WAL mode will be enabled at runtime for concurrent reads during writes.
rusqlite = { version = "0.31", features = ["bundled"] }

# --- Serialization ---
# Zero-copy deserialization where possible. serde_json uses a contiguous
# byte buffer internally, avoiding per-field heap allocations for small payloads.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Logging ---
# Structured async-aware tracing. The subscriber only allocates when a span
# is entered, so idle threads consume zero tracing memory.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# --- Environment Config ---
# Tiny crate (~20KB compiled) that reads .env files. No config framework bloat.
dotenvy = "0.15"

# --- Utilities ---
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
# CLI Wizard for onboarding
dialoguer = "0.11"


# --- Media Generation ---
# Base64 decoding for API image responses (DALL-E, Imagen return base64).
# Tiny crate (~30KB compiled), no-std compatible.
base64 = "0.22"

# MIME type parsing for media file uploads (image/png, video/mp4, etc.).
# Required by matrix-sdk's send_attachment API.
mime = "0.3"

[features]
default = []
# Enable local LLM inference via llama.cpp (requires cmake + C++ compiler)
local-llm = ["llama_cpp"]

# ============================================================================
# PROFILE OPTIMIZATIONS
# ============================================================================
# These settings minimize binary size and maximize runtime performance.
# The tradeoff is longer compile times, which is acceptable for a deploy target.

[profile.release]
# Link-Time Optimization: the compiler sees ALL code at once, enabling
# cross-crate inlining and dead-code elimination. This can reduce binary
# size by 20-30% and improve performance by 5-15%.
lto = true

# Single codegen unit forces the compiler to process all code in one chunk.
# Combined with LTO, this gives the optimizer maximum visibility for inlining.
# Tradeoff: compile time increases ~2-3x. Worth it for a deploy binary.
codegen-units = 1

# Abort on panic instead of unwinding. This eliminates all unwind tables
# and landing pads from the binary, saving ~100-500KB depending on code size.
# For a long-running agent, a panic is unrecoverable anyway — abort is correct.
panic = "abort"

# Strip all debug symbols and DWARF info from the release binary.
# Reduces binary size by 50-80%. Debug info is only useful in dev builds.
strip = true

# Maximum optimization level. Enables auto-vectorization, loop unrolling,
# and aggressive inlining. Combined with LTO, this produces near-C performance.
opt-level = 3

# ============================================================================
# PACKAGING METADATA
# ============================================================================

# --- Debian Package (cargo-deb) ---
[package.metadata.deb]
maintainer = "Ultraclaw Team"
copyright = "2026 Ultraclaw Team"
depends = "$auto"
section = "net"
priority = "optional"
extended-description = """\
Ultraclaw is a hyper-optimized autonomous AI agent that bridges \
multiple communication platforms via Matrix. It routes inference \
to cloud and local LLMs with automatic failover, and supports \
image/video generation via 8 cloud providers."""
assets = [
    ["target/release/ultraclaw", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ultraclaw/", "644"],
]

# --- macOS App Bundle (cargo-bundle) ---
[package.metadata.bundle]
name = "Ultraclaw"
identifier = "com.ultraclaw.agent"
category = "public.app-category.utilities"
short_description = "Hyper-optimized autonomous AI agent"
long_description = """\
Ultraclaw is an autonomous AI agent that bridges communication \
platforms via Matrix with cloud/local LLM failover and multimodal \
media generation."""
